Fix layout of nav bar on small viewports

--- a/app/components/accordion/accordion.module.scss
+++ b/app/components/accordion/accordion.module.scss
@@ -62,7 +62,7 @@
   }
 }
 
-@media (max-width: 550px) {
+@media (max-width: v.$screen-width-small) {
   .accordion {
     width: 92vw;
   }
