--- a/app/partials/_variables.scss
+++ b/app/partials/_variables.scss
@@ -1,5 +1,6 @@
 // sizes
 $content-width: 85%;
+$screen-width-small: 550px;
 
 // spacing
 $vertical-spacing-section: 12rem;
