--- a/app/sections/about-academy-section/about-academy-section.module.scss
+++ b/app/sections/about-academy-section/about-academy-section.module.scss
@@ -105,7 +105,7 @@
   }
 }
 
-@media (max-width: 550px) {
+@media (max-width: v.$screen-width-small) {
   .content-wrapper {
     width: 92vw;
   }
