--- a/app/sections/faq-section/faq-section.module.scss
+++ b/app/sections/faq-section/faq-section.module.scss
@@ -36,7 +36,7 @@
   }
 }
 
-@media (max-width: 550px) {
+@media (max-width: v.$screen-width-small) {
   .content-wrapper {
     width: 92vw;
   }
